# CrabbyAvif

./: .gitignore  .hgignore  Cargo.toml  README.md  build.rs  cargo-config.toml  cbindgen.toml  compare.sh  gen_test_case.sh  match_stats.csv  out_comparison.txt  poc_b_354563288.avif  todos.txt
.github/actions/setup-deps/: action.yml
.github/workflows/: android-mediacodec.yml  build-and-run-tests-avm.yml  build-and-run-tests-cli.yml  build-and-run-tests-experimental-features.yml  build-and-run-tests-libjxl.yml  build-and-run-tests.yml  c-header-file.yml  ci-c-header-file.yml  ci-rustfmt.yml  ci-unix-static-conformance.yml  ci-unix-static-no-default-features.yml  ci-unix-static.yml  clippy.yml  conformance-tests.yml  no-default-features.yml  rustfmt.yml  toml-formatter.yml  unix-static-conformance.yml  unix-static-no-default-features.yml  unix-static.yml
bindings/: dav1d.rs  libgav1.rs  libyuv.rs
c_api_tests/: CMakeLists.txt  README.md  avifalphanoispetest.cc  avifanimationtest.cc  avifcapitest.cc  avifcllitest.cc  avifdecodetest.cc  avifgainmaptest.cc  avifimagetest.cc  avifincrtest.cc  avifiotest.cc  avifkeyframetest.cc  avifmetadatatest.cc  avifoneshottest.cc  avifprogressivetest.cc  avifreformattest.cc  avifscaletest.cc  aviftest.c  aviftest.cc  aviftest_helpers.h  conformance_tests.cc  decoder_tests.cc  encoder_tests.cc  gainmap_tests.cc  image_tests.cc  incremental_tests.cc  reformat_tests.cc  sk_crabby_avif_codec_tests.cc  testutil.cc  testutil.h
examples/: crabby_decode.rs  crabbyavif.rs  dec.rs
examples/reader/: jpeg.rs  mod.rs  png.rs  y4m.rs
examples/writer/: jpeg.rs  mod.rs  png.rs  y4m.rs
include/avif/: avif.h  avif_compat.h  libavif_compat.h
src/: bindings.rs  build.rs  capi.rs  dav1d.rs  decoder.rs  gainmap.rs  image.rs  io.rs  lib.rs  main.rs  mp4box.rs  stream.rs  utils.rs
src/capi/: decoder.rs  encoder.rs  gainmap.rs  image.rs  io.rs  mod.rs  reformat.rs  types.rs  utils.rs
src/codecs/: android_mediacodec.rs  aom.rs  avm.rs  dav1d.rs  libgav1.rs  libjxl.rs  mod.rs
src/codecs/bindings/: dav1d.rs  libgav1.rs  mod.rs
src/decoder/: gainmap.rs  item.rs  mod.rs  sampletransform.rs  tile.rs  track.rs
src/encoder/: item.rs  mini.rs  mod.rs  mp4box.rs  sampletransform.rs
src/internal_utils/: io.rs  mod.rs  pixels.rs  sampletransform.rs  stream.rs
src/parser/: exif.rs  mini.rs  mod.rs  mp4box.rs  obu.rs
src/reformat/: alpha.rs  coeffs.rs  libyuv.rs  mod.rs  rgb.rs  rgb_impl.rs  scale.rs  sharpyuv.rs
src/reformat/bindings/: libyuv.rs  mod.rs
src/utils/: clap.rs  error.rs  mod.rs  pixels.rs  raw.rs  y4m.rs
src/utils/reader/: avif.rs  gif.rs  icc.rs  jpeg.rs  mod.rs  png.rs  xmp.rs  y4m.rs
src/utils/writer/: jpeg.rs  mod.rs  png.rs  y4m.rs
sys/aom-sys/: Cargo.toml  aom.cmd  build.rs  wrapper.h
sys/aom-sys/src/: lib.rs
sys/avm-sys/: Cargo.toml  avm.cmd  build.rs  wrapper.h
sys/avm-sys/src/: lib.rs
sys/dav1d-sys/: Cargo.toml  build.rs  dav1d.cmd  dav1d_android.sh
sys/dav1d-sys/src/: lib.rs
sys/libgav1-sys/: Cargo.toml  build.rs
sys/libgav1-sys/src/: lib.rs
sys/libjpeg-sys/: Cargo.toml  build.rs  libjpeg.cmd  wrapper.h
sys/libjpeg-sys/src/: lib.rs
sys/libjxl-sys/: Cargo.toml  build.rs  libjxl.cmd  wrapper.h
sys/libjxl-sys/src/: lib.rs
sys/libpng-sys/: Cargo.toml  build.rs  wrapper.h  zlibpng.cmd  zlibpng_windows.cmd
sys/libpng-sys/src/: lib.rs
sys/libsharpyuv-sys/: Cargo.toml  build.rs  libsharpyuv.cmd  wrapper.h
sys/libsharpyuv-sys/src/: lib.rs
sys/libyuv-sys/: Cargo.toml  build.rs  libyuv.cmd  libyuv_android.sh
sys/libyuv-sys/src/: lib.rs
sys/ndk-sys/: Cargo.toml  build.rs
sys/ndk-sys/src/: bindings.rs  empty.rs  lib.rs
tests/: av2.rs  av2_test.rs  avif.rs  conformance_tests.rs  decoder.rs  decoder_tests.rs  encoder.rs  encoder_tests.rs  iloc_extents.rs  iloc_extents_test.rs  jpeg.rs  jxl.rs  jxl_test.rs  lossless_test.rs  mini_test.rs  mod.rs  pixi_test.rs  png.rs  rgb.rs  rgb_tests.rs  sample_transform.rs  sample_transform_float.rs  sample_transform_test.rs  y4m.rs  y4m_tests.rs
tests/data/: alpha_premultiplied.avif  anim.avif  blue_gh_issue_692.heic  blue_p1.heic  colors-animated-8bpc-unsupported-hdlr-meta.avif  colors-animated-8bpc-unsupported-hdlr-moov.avif  extended_pixi.avif  gainmap_oriented.avif  grid_cell0_444_cell1_420.avif  grid_icc_individual_cells.avif  grid_nclx_individual_cells.avif  mismatch_colr_0_0.avif  mismatch_colr_0_1.avif  mismatch_colr_0_2.avif  mismatch_colr_1_0.avif  mismatch_colr_1_1.avif  mismatch_colr_1_2.avif  missing_colr_0_0.avif  missing_colr_0_1.avif  missing_colr_0_2.avif  missing_colr_1_0.avif  missing_colr_1_1.avif  missing_colr_1_2.avif  overlay_exact_bounds.avif  overlay_outside_bounds.avif  overlay_with_border.avif  overlay_yellow_bg.avif  paris_exif_non_zero_tiff_offset.avif  tmap_primary_item.avif  weld_sato_8plus8bit.avif  white_2x2.avif  white_2x2_multiple_iloc_entries_for_same_item.avif
tests/data/heic/: README.md  b_506659035_hvcc_nal_zero_length.heic  blue_422.heic  blue_444.heic  blue_alpha.heic  blue_grid_alpha.heic  yuv420_image_with_yuv400_gainmap.heic
tests/utils/: mod.rs
