[package]
name = "crabby-avif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "src/build.rs"

[dependencies]
ahash = {version = "0.8.6", optional = true}
byteorder = "1.5.0"
derivative = "2.2.0"
ndk = {version = "0.8.0", features = ["media"], optional = true}

[dev-dependencies]
test-case = "3.3.1"
seq-macro = "0.3.5"
tempfile = "3.8.1"
exitcode = "1.1.2"
rand = "0.8.5"

[build-dependencies]
bindgen = "0.69.1"

[features]
default = ["dav1d", "libyuv"]
capi = []
dav1d = []
libgav1 = []
libyuv = []
android_mediacodec = ["dep:ndk"]
use_ahash = ["dep:ahash"]

[package.metadata.capi.header]
name = "avif"
subdirectory = "avif"
