workspace = { members = ["sys/dav1d-sys", "sys/libyuv-sys"] }

[package]
name = "crabby-avif"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ahash = {version = "0.8.6", optional = true}
byteorder = "1.5.0"
libc = {version = "0.2.152", optional = true}
ndk = {version = "0.8.0", features = ["media"], optional = true}
dav1d-sys = { version = "0.1.0", path="sys/dav1d-sys", optional = true}
libyuv-sys = { version = "0.1.0", path="sys/libyuv-sys", optional = true}

[dev-dependencies]
test-case = "3.3.1"
seq-macro = "0.3.5"
tempfile = "3.8.1"
exitcode = "1.1.2"
rand = "0.8.5"

[build-dependencies]
bindgen = "0.69.1"

[features]
default = ["dav1d", "libyuv"]
capi = []
dav1d = ["dep:libc", "dep:dav1d-sys"]
libgav1 = []
libyuv = ["dep:libyuv-sys"]
android_mediacodec = ["dep:ndk"]
use_ahash = ["dep:ahash"]

[package.metadata.capi.header]
name = "avif"
subdirectory = "avif"
