workspace = { members = [
  "sys/aom-sys",
  "sys/dav1d-sys",
  "sys/libsharpyuv-sys",
  "sys/libyuv-sys",
  "sys/libgav1-sys",
  "sys/ndk-sys",
] }

[package]
name = "crabby-avif"
version = "0.1.0"
edition = "2021"     # Rust version

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = { version = "0.2.152", optional = true }

# The dependencies below are also workspace members in order to include their
# custom wrappers (lib.rs) in this project. However, even if their respective
# features are disabled, workspace members are still parsed by rust-analyzer
# (for example with cargo check --workspace, which is VSCode's default behavior)
# and some of the build scripts (build.rs) can panic or return errors when they
# cannot find the underlying dependency. To avoid that, the wrappers and build
# scripts are guarded by a dependency-level feature, which is only enabled if
# the dependency itself is enabled, and that is only the case if the top-level
# feature is enabled too. The dependency-level features and the top-level
# features have the same names for simplicity, they are just "forwarded down".
ndk-sys = { version = "0.1.0", path = "sys/ndk-sys", features = [
  "android_mediacodec",
], optional = true }
dav1d-sys = { version = "0.1.0", path = "sys/dav1d-sys", features = [
  "dav1d",
], optional = true }
libgav1-sys = { version = "0.1.0", path = "sys/libgav1-sys", features = [
  "libgav1",
], optional = true }
libyuv-sys = { version = "0.1.0", path = "sys/libyuv-sys", features = [
  "libyuv",
], optional = true }
libsharpyuv-sys = { version = "0.1.0", path = "sys/libsharpyuv-sys", features = [
  "libsharpyuv",
], optional = true }
aom-sys = { version = "0.1.0", path = "sys/aom-sys", features = [
  "aom",
], optional = true }

png = { version = "0.17.16", optional = true }
image = { version = "0.25.6", features = ["jpeg"], optional = true }
gif = { version = "0.13.1", optional = true }
gif-dispose = { version = "5.0.1", optional = true }

[dev-dependencies]
test-case = "3.3.1"
seq-macro = "0.3.5"
tempfile = "3.8.1"
rand = "0.8.5"
clap = { version = "4.5.28", features = ["derive"] }
clap_derive = { version = "4.5.28" }

[build-dependencies]
bindgen = "0.69.1"
cbindgen = "0.26.0"

[features]
default = ["dav1d", "libyuv", "png", "jpeg", "gif", "sharpyuv"]
capi = []
dav1d = ["dep:libc", "dep:dav1d-sys"]
libgav1 = ["dep:libgav1-sys"]
libyuv = ["dep:libyuv-sys"]
android_mediacodec = ["dep:ndk-sys"]
heic = []
disable_cfi = []
aom = ["dep:aom-sys", "encoder"]
encoder = []
png = ["dep:png"]
jpeg = ["dep:image"]
gif = ["dep:gif", "dep:gif-dispose"]
sample_transform = []
mini = []
sharpyuv = ["dep:libsharpyuv-sys"]

[package.metadata.capi.header]
name = "avif"
subdirectory = "avif"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(google3)',
  'cfg(android_soong)',
] }
